force-app/main/default/objects/Migrate_Custom_Object_Log__c/Migrate_Custom_Object_Log__c.object-meta.xml
<CustomObject>
    <label>Migrate Custom Object Log</label>
    <nameField>
        <displayFormat>MO-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migrate Custom Object Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>