force-app/main/default/objects/Migrate_Custom_Object_Log__c/fields/Entry_Point__c.field-meta.xml
<CustomField>
    <fullName>Entry_Point__c</fullName>
    <label>Entry Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>